build feature Login API, Get job list API, Get job detail API, Download job list API